chore(deps): update gradle to v9 (#82)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Levi Bostian <levi@levi.earth>